# study2024

./: .gitignore  main.py  urls.txt
accidents/: upload.py
detectors/: upload.py
links/: upload.py
mesh/: upload.py
ml-approach/: pyproject.toml
ml-approach/accidents/: write_to_postgis.py
ml-approach/detectors/: write_to_postgis.py
ml-approach/links/: write_to_postgis.py
ml-approach/mesh/: write_to_postgis.py
ml-approach/pdf/: image.py  mapping.sql  script.sql  word.py  write_to_image.py  write_to_postgis.py
ml-approach/traffics/: upload.py  write_to_postgis.py
ms-approach/geo/: pyproject.toml  tasks.py
ms-approach/measurement/: .gitignore  plot.py  pyproject.toml  tasks.py  tx.py  upload.py
ms-approach/sfm/: pairs_from_sequential.py  plot.py  pyproject.toml  tasks.py
ms-approach/simulator/src/: forward.rs  settings.rs
ms-approach/tracking/: pyproject.toml  tasks.py
pop-mesh/: upload.py
preprocess/: pyproject.toml
sfm/: pairs_from_sequential.py  pyproject.toml
simulation/: .gitignore  Cargo.toml
simulation-prototype/: Cargo.toml
simulation-prototype/src/: field.rs  ig_ped.rs  lt_veh.rs  main.rs  math.rs  ped.rs  rt_veh.rs
simulation/src/: compute.rs  field.rs  forward.rs  ig_ped.rs  left_turned.rs  lt_veh.rs  main.rs  ped.rs  pedestrian.rs  plot.rs  right_turned.rs  rt_veh.rs  settings.rs  sim.rs  simulator.rs  widget.rs
simulator/src/: main.rs  plot.rs
traffics/: urls.txt
