[project]
name = "ml-approach"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "osmnx>=1.9.3",
    "pandas>=2.2.3",
    "pymupdf>=1.24.11",
    "sqlalchemy>=2.0.35",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pyright>=1.1.384",
    "ruff>=0.6.9",
]
