[project]
name = "preprocess"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "geoalchemy2>=0.16.0",
    "geopandas>=1.0.1",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.36",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.12.0",
    "pyright>=1.1.384",
    "ruff>=0.6.9",
]
