[project]
name = "sfm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "hloc",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "opencv-python>=4.10.0.84",
    "scikit-learn>=1.6.0",
    "ultralytics>=8.3.40",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.12.0",
    "pyright>=1.1.384",
    "ruff>=0.6.9",
]

[tool.uv.sources]
hloc = { git = "https://github.com/cvg/Hierarchical-Localization" }
